@@ -16,7 +16,7 @@
    |         Ilia Alshanetsky <iliaa@php.net>                             |
    +----------------------------------------------------------------------+
  */
-/* $Id: exec.c,v 1.113.2.3.2.4 2007/12/31 07:20:12 sebastian Exp $ */
+/* $Id: exec.c,v 1.113.2.3.2.5 2008/03/17 23:02:26 iliaa Exp $ */
 
 #include <stdio.h>
 #include "php.h"
@@ -270,6 +270,11 @@ char *php_escape_shell_cmd(char *str) {
 	cmd = safe_emalloc(2, l, 1);
 	
 	for (x = 0, y = 0; x < l; x++) {
+		/* skip non-valid multibyte characters */
+		if (php_mblen(str + x, (l - x)) < 0) {
+			continue;
+		}
+
 		switch (str[x]) {
 			case '"':
 			case '\'':
